arreglos de estilo, listo

--- a/index.html
+++ b/index.html
@@ -1,38 +1,50 @@
 <!DOCTYPE html>
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curriculum Vitae</title>
 </head>
-<body style="background-color: hwb(244 73% 5%);">
-    <h1><ins>Curriculum Vitae</ins></h1>
-    <h2>FRANCISCA NEIRA BRAVO</h2>
+
+<body style="background-color: #5C8374">
+    <h1 style="color: hsl(201, 66%, 7%);"><ins>Curriculum Vitae</ins></h1>
+    <h2 style="color: #183D3D;">FRANCISCA NEIRA BRAVO</h2>
     <img src="./assets/img/inicio.PNG" alt="Foto persona">
     <hr>
-    <h3 style="color: #92512b;">Resumen</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam voluptatum nulla aspernatur fuga perferendis voluptas impedit vitae cum nam? Error ipsum vitae ipsa unde nemo vero rerum, ad tempore culpa!</p>
-    <h3 style="color: #92512b;">Datos personales</h3>
+    <h3 style="color: #183D3D">Resumen</h3>
+    <p>Trabajadora con capacidad de atención de personas y relaciones públicas. Buen desempeño en el cumplimiento de <br>
+        tareas propuestas, así como también en el cumplimiento de objetivos. Con alta disposición al trabajo en equipo.
+    <h3 style="color: #183D3D;">Datos personales</h3>
     <ul>
         <li>Nombre : Francisca Yalier Neira Bravo</li>
         <li>Lugar de nacimiento : Viña del mar</li>
         <li>Fecha de nacimiento : 22/12/2001</li>
         <li>Contacto : +56 9 33579748</li>
+        <li>Mail:<ins style="color: blue;">yalier.fran23@gmail.com</ins></li>
     </ul>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci, expedita obcaecati vero enim inventore quam non velit quos error ab ipsam esse unde nemo voluptas magni quisquam labore! Facilis, aliquam.</p>
-    <h3 style="color: #92512b;">Formación</h3>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate asperiores deserunt ratione magni vero veritatis quas eos, voluptatem incidunt, quam dolorem qui dolores animi illo, autem id dolore. Perferendis, modi.</p>
-    <h3 style="color: #92512b;">Premios y Reconocimientos</h3>
+    <h3 style="color: #183D3D;">Experiencia</h3>
+    <p><strong>2021:</strong>Estudiante en práctica, Corporación Municipal Educacional, Viña del Mar. <br>
+
+        Funciones: Traspaso de información a base de datos, mantener la organización del lugar y atención de personas.
+    </p>
+    <p><strong>2022:</strong>Asistente de ventas, Tricot. <br>
+
+        Funciones: Atención de personas, Organización de artículos.     </p>
+
+    <h3 style="color: #183D3D;">Educación</h3>
     <ul>
-        <ol>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae hic at ipsum esse quos repellendus. Sed laborum velit ipsam perferendis quasi quidem magni aliquam, labore sequi voluptates saepe officia quaerat.</ol>
-        <ol>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut vel, dolor accusantium ipsam deserunt dolorem unde molestias neque voluptas earum amet repellat quasi nemo facere! Sequi in hic libero molestias.</ol>
-        <ol>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi autem quisquam quasi quod voluptatibus atque dolorem earum distinctio sit, ducimus fuga? Corporis nostrum minima numquam doloribus, cupiditate odit accusantium iusto.</ol>
+        <ol><strong>2019: </strong>Enseñanza Media Completa, Liceo Benjamín Vicuña Mackenna, Administración con mención en recursos humanos, Viña del Mar.         </ol>
+        <ol><strong>2022: </strong>Cursando Informática Mención Ciberseguridad, Centro de Formación Técnica de la Región de Valparaíso. 
+
     </ul>
-    <a href="./portafolio.html">Portafolio</a>
+    <hr>
+    <a href="./portafolio.html" style="color: #93B1A6">Portafolio</a>
     <br>
-    Enlace <a href="">LinkedIn </a>
+    <p style="color: #93B1A6;">Enlace <a href="">LinkedIn </a></p>
 
 
 
 
 </body>
+
 </html>
