--- a/portafolio.html
+++ b/portafolio.html
@@ -5,17 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>tabla </title>
 </head>
-<body>
-    <table style="width: 100;">
+<body style="background-color:  #0E8388;">
+    <a href="./index.html" style="color: #016A70;" > Regresar</a> <br>
+    <h2 style="color: #2E4F4F;"><ins>Portafolio de proyectos</ins></h2>
+    <table border="8px" style="background-color:#CBE4DE ">
         <tr>
-            <td>Proyecto 1</td>
-            <td>Proyecto 2</td>
-            <td>Proyecto 3</td>
+            <td><strong>Proyecto 1</strong></td>
+            <td>
+                <img src="./assets/img/proyecto1.PNG">
+            </td>
         </tr>
         <tr>
-            <td><img src="./assets/img/cvv.PNG"></td>
-            <td></td>
-            <td></td>
+            <td><strong>Proyecto 2</strong></td>
+        </tr>
+        <tr>
+            <td><strong>Proyecto 3</strong></td>
         </tr>
     </table>
 </body>
